package exercise44.base;

import org.json.simple.JSONArray;
import org.json.simple.JSONObject;
import org.json.simple.parser.JSONParser;
import org.json.simple.parser.ParseException;

import java.io.FileReader;
import java.io.IOException;

public class jsonReader {

    public JSONArray parseJSON(JSONObject jsonObject, Object obj) {
        //Create one json parser object
        //Create a JSON Array
            //Read json file using parser and store it in obj
            //Create json object to read internal values
            //Reading products array from  the file
            //Catch exceptions
    }
}
