package exercise44.base;

import org.json.simple.JSONArray;
import org.json.simple.JSONObject;

import java.io.BufferedReader;
import java.io.IOException;
import java.io.InputStreamReader;
import java.util.Iterator;

public class readUserInput {

    public void readInput(JSONArray subjects) {
        //Create buffered reader object to take user input
        //Create string variable
        //Flag is used whether given string is present or not
        //Create iterator for products array
        //Loop through the iterator
            //Create another json
            //Get the name value
            //Compare it with given input

        //If flag value is zero, then value is not found
    }
}
